2000-07-07  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* configure.in: add check for strings.h header.

	* src/spellchecker.C: include <strings.h> in order to have a
	definition for bzero().

2000-07-07  Juergen Vigna  <jug@sad.it>

	* src/insets/insettext.C (draw): set the status of the bv->text to
	CHANGED_IN_DRAW if top_x changed and so a reinit is necessary.

	* src/screen.C (DrawOneRow): 
	(DrawFromTo): redraw the actual row if something has changed in it
	while drawing.

	* src/text.C (draw): call an update of the toplevel-inset if something
	has changed inside while drawing.

	* src/lyxtext.h: added CHANGED_IN_DRAW status.

2000-07-06  Angus Leeming  <a.leeming@ic.ac.uk>

	* src/insets/insetbib.[Ch] (callback) new method, moving callback
	processing inside class.

	* src/insets/insetindex.[Ch] (callback) new method, moving callback
	processing inside class.

	* src/insets/insetindex.h new struct Holder, consistent with other
 	insets.

	* src/insets/insetcite.[Ch] and elsewhere: stripped out xforms
	citation dialog from main code and placed it in src/frontends/xforms.
	Dialog launched through signals instead of callbacks
	
2000-07-06  R. Lahaye  <lahaye@postech.ac.kr>

	* lyx.man: update the options description.

2000-07-05  R. Lahaye  <lahaye@postech.ac.kr>

	* src/lyx_gui.C src/lyx_main.C: improve the -geometry support,
	handle neg values, set min width to 590, add doc about -display  

2000-07-05  Juergen Vigna  <jug@sad.it>

	* src/insets/lyxinset.h: changed Painter & in ascent(), descent()
	calls to BufferView *.

	* src/insets/insettext.C (checkAndActivateInset): small fix non
	HIGHLY_EDITABLE insets should not be entered by cursor-move-over!

	* src/insets/insetcommand.C (Read): Fixed as insets should read till
	their \end_inset token!

2000-07-04  edscott  <edscott@imp.mx>

	* src/lyxrc.C, src/lyxrc.h, src/BufferView_pimpl.C,
	lib/lyxrc.example: added option \wheel_jump

2000-07-04   R. Lahaye  <lahaye@postech.ac.kr>
